# actix-web-askama-global-context

./: Cargo.toml  README.md
src/: main.rs
templates/: public.html  table.html
