[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
futures-util = "0.3.18"
actix = "0.12.0"
actix-web = "4.0.0-beta.13"
askama = { git = "https://github.com/djc/askama", default-features = false, features = ["with-actix-web", "mime", "mime_guess"] }
askama_actix = { git = "https://github.com/djc/askama" }
